<resources>
    <string name="app_name" translatable="false">Game</string>
    <string name="name">Enter your name</string>
    <string name="log">Login</string>
    <string name="OK">OK</string>
    <string name="hello">Hello and Welcome</string>
    <string name="finsh_level">finsh Level two</string>
    <string name="Level1">Level 1</string>
    <string name="Level2">Level 2</string>
    <string name="Level3">Level 3</string>
    <string name="Level4">Level 4</string>
    <string name="Level5">Level 5</string>
    <string name="Level6">Level 6</string>
    <string name="Level7">Level 7</string>
    <string name="Level8">Level 8</string>
    <string name="Level9">Level 9</string>
    <string name="Level10">Level 10</string>
    <string name="man">Welcome to The Game</string>


    <string name="gret">Great, you\'ve unlocked the third level, you\'re great, keep up the challenge</string>
</resources>