<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bccfirst">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".first_page">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/toast_frame"
                android:backgroundTint="#7A194D"
                android:gravity="center"
                android:text="name"
                android:textColor="#FAF6F6"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bcc"
                    android:text="@string/Level1"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level3"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level5"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l7"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level7"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l9"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level9"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level2"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level4"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level6"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l8"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level8"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/l10"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:text="@string/Level10"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>